--- a/style.css
+++ b/style.css
@@ -6,3 +6,36 @@ html, body {
 	color: #333;
 	background-color: #f4f4f4;
 }
+h1, h2, h3, h4, h5, h6 {
+	margin: 0;
+	padding: 0;
+}
+h1 {
+	width: 100%;
+	text-align: center;
+}
+input[type="file"] {
+	width: 100%;
+}
+.container {
+	width: 100%;
+	max-width: 500px;
+	margin: 0 auto;
+	overflow: hidden;
+}
+.container > div {
+	width: 92%;
+	margin: 10px auto;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	align-content: center;
+}
+form {
+	width: 100%;
+	background-color: #00000010;
+	padding: 20px;
+	border-radius: 5px;
+	display: flex;
+	justify-content: space-between;
+}
